cmake_minimum_required(VERSION 3.16)
project(openGLProject C CXX ASM)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE OFF)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)


set(CMAKE_CXX_STANDARD 17)  # or newer
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wfatal-errors")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wfatal-errors")

set(CMAKE_C_FLAGS_DEBUG "-g -O0 -Wfatal-errors")
set(CMAKE_C_FLAGS_RELEASE "-O3 -Wfatal-errors")


add_subdirectory("gwcEngine")


